Update Class#newInstance() deprecations
Since JDK 9, `clazz.newInstance()` is deprecated in favor of
`clazz.getDeclaredConstructor().newInstance()`

See https://docs.oracle.com/javase/9/docs/api/java/lang/Class.html#newInstance--

Signed-off-by: Pierre Belloy <p.belloy@axelor.com>