@@ -92,9 +92,9 @@ public class AuthPac4jModuleCas extends AuthPac4jModule {
 
     if (urlResolverClass != null) {
       try {
-        final UrlResolver urlResorver = (UrlResolver) Class.forName(urlResolverClass).newInstance();
+        final UrlResolver urlResorver = (UrlResolver) Class.forName(urlResolverClass).getDeclaredConstructor().newInstance();
         casConfig.setUrlResolver(urlResorver);
-      } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+      } catch (Exception e) {
         logger.error(e.getMessage(), e);
       }
     }
@@ -102,9 +102,9 @@ public class AuthPac4jModuleCas extends AuthPac4jModule {
     if (defaultTicketValidatorClass != null) {
       try {
         final TicketValidator defaultTicketValidator =
-            (TicketValidator) Class.forName(defaultTicketValidatorClass).newInstance();
+            (TicketValidator) Class.forName(defaultTicketValidatorClass).getDeclaredConstructor().newInstance();
         casConfig.setDefaultTicketValidator(defaultTicketValidator);
-      } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+      } catch (Exception e) {
         logger.error(e.getMessage(), e);
       }
     }
@@ -116,11 +116,10 @@ public class AuthPac4jModuleCas extends AuthPac4jModule {
 
     if (logoutHandlerClass != null) {
       try {
-        @SuppressWarnings("unchecked")
         final LogoutHandler<? extends WebContext> logoutHandler =
-            (LogoutHandler<? extends WebContext>) Class.forName(logoutHandlerClass).newInstance();
+            (LogoutHandler<? extends WebContext>) Class.forName(logoutHandlerClass).getDeclaredConstructor().newInstance();
         casConfig.setLogoutHandler(logoutHandler);
-      } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+      } catch (Exception e) {
         logger.error(e.getMessage(), e);
       }
     }
